--- a/train-history-backend/pom.xml
+++ b/train-history-backend/pom.xml
@@ -20,8 +20,10 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<aws.msql.driver.version>1.1.15</aws.msql.driver.version>
 		<java.version>17</java.version>
+		<aws.msql.driver.version>1.1.15</aws.msql.driver.version>
+		<com.google.guava.version>33.3.0-jre</com.google.guava.version>
+		<net.logstash.logback.version>8.0</net.logstash.logback.version>
 	</properties>
 
 	<profiles>
@@ -77,7 +79,7 @@
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<version>8.4.0</version>
+			<version>9.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -87,7 +89,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>33.2.1-jre</version>
+			<version>${com.google.guava.version}</version>
 		</dependency>
 		<dependency>
             <groupId>com.amazonaws.secretsmanager</groupId>
@@ -101,7 +103,7 @@
 		<dependency>
 			<groupId>net.logstash.logback</groupId>
 			<artifactId>logstash-logback-encoder</artifactId>
-			<version>7.4</version>
+			<version>${net.logstash.logback.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -116,7 +118,7 @@
 				<artifactId>versions-maven-plugin</artifactId>
 				<version>2.16.2</version>
 				<configuration>
-					<rulesUri>file:///${maven.multiModuleProjectDirectory}/../versions-maven-plugin-rules.xml</rulesUri>
+					<rulesUri>file:///${maven.multiModuleProjectDirectory}/versions-maven-plugin-rules.xml</rulesUri>
 				</configuration>
 			</plugin>
 		</plugins>
