DPO-2728 json logging (#64)
* DPO-2728 use common

* DPO-2728 use new logging

* DPO-2728 move submodule-init to root-pom

* DPO-2728 initialize java common

* DPO-2728 add debug

* DPO-2728 fix path

* DPO-2728 add missing dependencies

* DPO-2728 add more dependencies

* DPO-2728 more dependencies

* DPO-2728 next dependency

* DPO-2728 set correct app in logging

--- a/train-history-backend/pom.xml
+++ b/train-history-backend/pom.xml
@@ -20,7 +20,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 		<aws.msql.driver.version>1.1.15</aws.msql.driver.version>
 		<com.google.guava.version>33.3.0-jre</com.google.guava.version>
 		<net.logstash.logback.version>8.0</net.logstash.logback.version>
@@ -65,12 +65,29 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.16.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>2.2.21</version>
+		</dependency>
+
 		<dependency>
 			<groupId>software.aws.rds</groupId>
 			<artifactId>aws-mysql-jdbc</artifactId>
@@ -105,6 +122,12 @@
 			<artifactId>logstash-logback-encoder</artifactId>
 			<version>${net.logstash.logback.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.0.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -120,6 +143,38 @@
 				<configuration>
 					<rulesUri>file:///${maven.multiModuleProjectDirectory}/versions-maven-plugin-rules.xml</rulesUri>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>3.4.0</version>
+				<executions>
+					<execution>
+						<id>add-source</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>../lib/digitraffic-common-java/src/main/java</source>
+							</sources>
+						</configuration>
+					</execution>
+					<execution>
+						<id>add-test-source</id>
+						<phase>generate-test-sources</phase>
+						<goals>
+							<goal>add-test-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>../lib/digitraffic-common-java/src/test/java</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
