--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+      - name: Run initialize
+        run: mvn initialize
       - name: Build frontend
         run: |
           cd train-history-web
