--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -59,6 +59,8 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
+      - name: Run initialize
+        run: mvn initialize
       - name: Build frontend
         run: |
           cd train-history-web
