--- a/train-history-web/package.json
+++ b/train-history-web/package.json
@@ -20,43 +20,44 @@
     "@angular/compiler": "^18.2.13",
     "@angular/core": "^18.2.13",
     "@angular/forms": "^18.2.13",
+    "@angular/material": "^18.2.14",
     "@angular/platform-browser": "^18.2.13",
     "@angular/platform-browser-dynamic": "^18.2.13",
-    "@angular/router": "^18.2.13",
-    "rxjs": "~7.8.1",
-    "tslib": "^2.8.1",
-    "zone.js": "~0.14.10",
-    "@angular/material": "^18.2.14",
     "@angular/platform-server": "^18.2.13",
-    "core-js": "^3.39.0",
-    "rxjs-compat": "^6.6.7"
+    "@angular/router": "^18.2.13",
+    "core-js": "^3.40.0",
+    "rxjs": "~7.8.2",
+    "rxjs-compat": "^6.6.7",
+    "tslib": "^2.8.1",
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.12",
-    "@angular/cli": "^18.2.12",
-    "@angular/compiler-cli": "^18.2.13",
-    "@types/jasmine": "~5.1.5",
-    "jasmine-core": "~5.5.0",
-    "karma": "~6.4.4",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.1",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.5.4",
+    "@angular-devkit/build-angular": "^18.2.14",
     "@angular-eslint/builder": "18.4.3",
     "@angular-eslint/schematics": "18.4.3",
     "@angular-eslint/template-parser": "18.4.3",
+    "@angular/cli": "^18.2.14",
+    "@angular/compiler-cli": "^18.2.13",
     "@angular/language-service": "18.2.13",
-    "@types/node": "^22.10.5",
-    "@typescript-eslint/eslint-plugin": "^8.19.1",
-    "@typescript-eslint/parser": "^8.19.1",
-    "eslint": "^9.17.0",
+    "@types/jasmine": "~5.1.7",
+    "@types/node": "^22.13.5",
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
+    "@typescript-eslint/parser": "^8.25.0",
+    "eslint": "^9.21.0",
+    "jasmine-core": "~5.6.0",
     "jasmine-spec-reporter": "^7.0.0",
+    "karma": "~6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
     "karma-cli": "~2.0.0",
+    "karma-coverage": "~2.2.1",
     "karma-coverage-istanbul-reporter": "~3.0.3",
-    "prettier": "^3.4.2",
-    "prettier-plugin-packagejson": "^2.5.6",
-    "pretty-quick": "^4.0.0"
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.5.2",
+    "prettier-plugin-packagejson": "^2.5.8",
+    "pretty-quick": "^4.0.0",
+    "typescript": "~5.5.4",
+    "esbuild": "^0.25.0"
   },
   "overrides": {
     "semver": "^7.3.5"
