--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   mirror-action:
     if: github.repository != 'tmfg/digitraffic-rail-history'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: mirror
         uses: tmfg/digitraffic-actions@mirror/v2
