--- a/train-history-web/package.json
+++ b/train-history-web/package.json
@@ -29,7 +29,7 @@
     "rxjs": "~7.8.2",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.8.1",
-    "zone.js": "~0.15.0"
+    "zone.js": "^0.14.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.17",
@@ -43,6 +43,7 @@
     "@types/node": "^22.14.0",
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "@typescript-eslint/parser": "^8.29.0",
+    "esbuild": "^0.25.2",
     "eslint": "^9.23.0",
     "jasmine-core": "~5.6.0",
     "jasmine-spec-reporter": "^7.0.0",
@@ -56,8 +57,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-packagejson": "^2.5.10",
     "pretty-quick": "^4.1.1",
-    "typescript": "~5.5.4",
-    "esbuild": "^0.25.2"
+    "typescript": "~5.5.4"
   },
   "overrides": {
     "semver": "^7.3.5"
