DPO-3200 Rail-historyn http-proxy-middleware pitää päivittää

--- a/train-history-web/package.json
+++ b/train-history-web/package.json
@@ -32,32 +32,32 @@
     "zone.js": "^0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.17",
+    "@angular-devkit/build-angular": "^18.2.19",
     "@angular-eslint/builder": "18.4.3",
     "@angular-eslint/schematics": "18.4.3",
     "@angular-eslint/template-parser": "18.4.3",
-    "@angular/cli": "^18.2.17",
+    "@angular/cli": "^18.2.19",
     "@angular/compiler-cli": "^18.2.13",
     "@angular/language-service": "18.2.13",
-    "@types/jasmine": "~5.1.7",
-    "@types/node": "^22.14.0",
-    "@typescript-eslint/eslint-plugin": "^8.29.0",
-    "@typescript-eslint/parser": "^8.29.0",
-    "esbuild": "^0.25.2",
-    "eslint": "^9.23.0",
-    "jasmine-core": "~5.6.0",
+    "@types/jasmine": "^5.1.7",
+    "@types/node": "^22.15.3",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
+    "esbuild": "^0.25.3",
+    "eslint": "^9.25.1",
+    "jasmine-core": "^5.7.1",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "~6.4.4",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-cli": "~2.0.0",
-    "karma-coverage": "~2.2.1",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage": "^2.2.1",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "prettier": "^3.5.3",
     "prettier-plugin-packagejson": "^2.5.10",
     "pretty-quick": "^4.1.1",
-    "typescript": "~5.5.4"
+    "typescript": "^5.5.4"
   },
   "overrides": {
     "semver": "^7.3.5"
