WIP: A working version of template plus htmx frontend.

--- a/train-history-backend/src/main/resources/application.properties
+++ b/train-history-backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 networkaddress.cache.ttl=3600
 server.port = 26087
-server.servlet.context-path=/api/v1/
+#server.servlet.context-path=/api/v1/
 
 #spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=true
