--- a/train-history-web/package.json
+++ b/train-history-web/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "build": "ng build",
-    "dev": "ng serve --host 0.0.0.0 --proxy-config proxy.conf.json",
-    "dev:local": "ng serve --host 0.0.0.0 --proxy-config proxy-local.conf.json",
+    "dev": "ng serve --host localhost --proxy-config proxy.conf.json",
+    "dev:local": "ng serve --host localhost --proxy-config proxy-local.conf.json",
     "e2e": "ng e2e",
     "lint": "ng lint",
     "ng": "ng",
@@ -20,7 +20,7 @@
     "@angular/compiler": "^18.2.13",
     "@angular/core": "^18.2.13",
     "@angular/forms": "^18.2.13",
-    "@angular/material": "^18.2.14",
+    "@angular/material": "^18.2.13",
     "@angular/platform-browser": "^18.2.13",
     "@angular/platform-browser-dynamic": "^18.2.13",
     "@angular/platform-server": "^18.2.14",
