--- a/train-history-backend/pom.xml
+++ b/train-history-backend/pom.xml
@@ -89,6 +89,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.pebbletemplates</groupId>
+			<artifactId>pebble-spring-boot-starter</artifactId>
+			<version>3.2.4</version>
+		</dependency>
+
+		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
 			<artifactId>swagger-annotations</artifactId>
 			<version>2.2.35</version>
