--- a/train-history-updater/pom.xml
+++ b/train-history-updater/pom.xml
@@ -80,25 +80,30 @@
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
         </dependency>
+
+        <!--This is used to add support for bootstrap.properties file-->
         <dependency>
-            <groupId>com.amazonaws.secretsmanager</groupId>
-            <artifactId>aws-secretsmanager-jdbc</artifactId>
-            <version>2.0.3</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+            <version>4.3.0</version>
         </dependency>
+        <!-- AWS Secret manager -->
+        <dependency>
+            <groupId>io.awspring.cloud</groupId>
+            <artifactId>spring-cloud-aws-starter-secrets-manager</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+        <!-- JDBC Driver -->
         <dependency>
             <groupId>software.aws.rds</groupId>
             <artifactId>aws-mysql-jdbc</artifactId>
             <version>${aws.msql.driver.version}</version>
         </dependency>
+        <!-- MySQL Connector Java implementation -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>9.4.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -149,6 +154,12 @@
             <version>3.1.1</version>
         </dependency>
 
+        <!-- Test dependencies -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
