Refactoring. Use services and more types in templates. Add cookie headers.

--- a/train-history-backend/src/main/resources/application.properties
+++ b/train-history-backend/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 networkaddress.cache.ttl=3600
 server.port = 26087
-#server.servlet.context-path=/api/v1/
 
 #spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=true
@@ -17,6 +16,7 @@ spring.datasource.test-while-idle=true
 spring.datasource.defaultTransactionIsolation=3
 
 digitraffic-url=https://rata.digitraffic.fi
+fintraffic-url=https://www.fintraffic.fi/
 
 # Prevent exploit https://www.lunasec.io/docs/blog/log4j-zero-day/
 log4j2.formatMsgNoLookups=true
