--- a/train-history-backend/package.json
+++ b/train-history-backend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build-js": "rollup -c",
     "build-css": "node css-handling.mjs",
-    "build": "npm run build-js && npm run build-css",
+    "sass-task": "sass --no-source-map --load-path=node_modules src/sass/main.scss src/main/resources/static/css/main.css",
+    "build": "npm run build-js && npm run build-css && npm run sass-task",
     "watch": "rollup -c -w",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf src/main/resources/static/js/*.js src/main/resources/static/js/*.map"
@@ -16,12 +17,14 @@
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@rollup/plugin-typescript": "^12.1.4",
     "rollup": "^4.52.4",
+    "sass": "^1.93.2",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "bootstrap": "^5.3.8",
+    "@fintraffic/fds-coreui-css": "^0.1.3",
     "htmx-ext-path-params": "^2.0.1",
-    "htmx.org": "^2.0.7"
+    "htmx.org": "^2.0.7",
+    "lucide": "^0.546.0"
   }
 }
