--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Build backend
         run: |
           cd train-history-backend
+          pnpm build
           mvn install -DskipTests=true
       - name: Build updater
         run: |
