--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -47,6 +47,10 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version: '22'
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
@@ -65,6 +69,7 @@ jobs:
         run: |
           cd train-history-backend
           mvn install -DskipTests=true -Ddependency-check.skip=true
+          pnpm install
           pnpm build
           cp target/train-history-backend-0.0.1-SNAPSHOT.jar ../config/aws/train-history-backend.jar
           cd ../config/aws
@@ -99,6 +104,15 @@ jobs:
             --file=docker/Dockerfile-rail-train-history-updater .
           
           docker push ${{ secrets.ECR_URL }}/train-history-updater:${GITHUB_SHA}
+      - name: Run Playwright tests
+        if: ${{ github.event.inputs.env == 'beta' }}
+        working-directory: ./train-history-backend
+        env:
+          TRAIN_HISTORY_TEST_URL: ${{ vars.TRAIN_HISTORY_TEST_URL }}
+        run: |
+          echo "Wait for the backend to start..."
+          sleep 30
+          pnpm run e2e
       - name: Notify Slack
         if: failure()
         uses: 8398a7/action-slack@v3
