--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,3 +58,48 @@ jobs:
           fields: repo, job, took
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+  E2E:
+    if: ${{github.repository != 'tmfg/digitraffic-rail-history' && github.event.inputs.env == 'beta'}}
+    environment: ${{ github.event.inputs.env }}
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+        with:
+          ref: ${{ github.event.inputs.commit-hash }}
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: '22'
+          cache: "pnpm"
+          cache-dependency-path: ./train-history-backend
+
+      - name: Install dependencies for E2E-tests
+        working-directory: ./train-history-backend
+        run: pnpm install
+
+      - name: Install Playwright Browsers
+        working-directory: ./train-history-backend
+        run: pnpm dlx playwright install --with-deps
+
+      - name: Update Playwright
+        working-directory: ./train-history-backend
+        run: pnpm exec playwright install
+
+      - name: Run E2E-tests
+        env:
+          TRAIN_HISTORY_TEST_URL: ${{ vars.TRAIN_HISTORY_TEST_URL }}
+        working-directory: ./train-history-backend
+        run: pnpm run e2e
+
+      - name: Upload Playwright report
+        uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: ./train-history-backend/playwright-report/
+          retention-days: 30
