--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -36,7 +36,7 @@ jobs:
           repository: ${{ secrets.CONFIG_REPO_NAME }}
           ssh-key: ${{ secrets.CONFIG_SSH_PRIVATE_KEY }}
           ref: ${{ inputs.config-repo-branch }}
-          path: config
+          path: digitraffic-ci
       - name: Setup Java
         uses: actions/setup-java@v5
         with:
@@ -73,8 +73,8 @@ jobs:
           mvn install -DskipTests=true -Ddependency-check.skip=true
           pnpm install
           pnpm build
-          cp target/train-history-backend-0.0.1-SNAPSHOT.jar ../config/aws/train-history-backend.jar
-          cd ../config/aws
+          cp target/train-history-backend-0.0.1-SNAPSHOT.jar ../digitraffic-ci/aws/train-history-backend.jar
+          cd ../digitraffic-ci/aws
           
           docker buildx build \
             --no-cache \
@@ -92,8 +92,8 @@ jobs:
         run: |
           cd train-history-updater
           mvn install -DskipTests=true -Ddependency-check.skip=true
-          cp target/train-history-updater-0.0.1-SNAPSHOT.jar ../config/aws/train-history-updater.jar
-          cd ../config/aws
+          cp target/train-history-updater-0.0.1-SNAPSHOT.jar ../digitraffic-ci/aws/train-history-updater.jar
+          cd ../digitraffic-ci/aws
           docker buildx build \
             --no-cache \
             --build-arg ENV=${{ github.event.inputs.env }} \
@@ -138,7 +138,7 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
 
   deploy:
-    if: github.repository != 'tmfg/digitraffic-rail-history' && ${{ always() && contains(needs.*.result, 'success') && !(contains(needs.*.result, 'failure')) }}
+    if: ${{ always() && github.repository != 'tmfg/digitraffic-rail-history' && contains(needs.*.result, 'success') && !(contains(needs.*.result, 'failure')) }}
     environment: ${{ github.event.inputs.env }}
     needs: install
     strategy:
@@ -161,6 +161,7 @@ jobs:
           ci-repo-url: ${{ secrets.CONFIG_REPO_NAME }}
           ci-repo-branch: ${{ github.event.inputs.config-repo-branch }}
           ci-ssh-key: ${{ secrets.CONFIG_SSH_PRIVATE_KEY }}
+
       - name: Update ${{ matrix.app }} ECS service
         uses: tmfg/digitraffic-actions@ecs-service-update/v1
         with:
@@ -170,19 +171,42 @@ jobs:
           task-definition: train-history-${{ matrix.app }}
           cluster-name: ${{ secrets.CLUSTER_NAME }}
           desired-count: 1
+
       - name: Download ${{ matrix.app }} SBOM
         uses: actions/download-artifact@v7
         with:
           name: ${{ matrix.app}}-sbom.json
+
+      - name: Checkout CI-repo
+        uses: actions/checkout@v6
+        with:
+          repository: ${{ secrets.CONFIG_REPO_NAME }}
+          ssh-key: ${{ secrets.CONFIG_SSH_PRIVATE_KEY }}
+          ref: ${{ inputs.config-repo-branch }}
+          path: digitraffic-ci
+
+      - name: Read SBOM config
+        id: sbom-config
+        run: |
+          echo "config<<EOF" >> $GITHUB_OUTPUT
+          cat digitraffic-ci/aws/sbom/rail.json >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+          echo "common<<EOF" >> $GITHUB_OUTPUT
+          cat digitraffic-ci/aws/sbom/config.json >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT                  
+
       - name: Configure AWS credentials for SBOM install
         uses: aws-actions/configure-aws-credentials@v5
         with:
-          role-to-assume: ${{ secrets.SBOM_AWS_ROLE }}
+          role-to-assume: ${{ fromJson(steps.sbom-config.outputs.common).sbomUploadRoleArn }}
           role-session-name: gh-actions-upload-sbom-rail-${{ matrix.app }}-${{ github.event.inputs.env }}
           aws-region: ${{ secrets.AWS_REGION }}
+
       - name: Upload ${{ matrix.app }} SBOM
         run: |
-          aws s3 cp ${{ matrix.app }}-sbom.json s3://${{ secrets.SBOM_BUCKET }}/${{ fromJson(secrets.SBOM_PROJECT_KEYS)[github.event.inputs.env][matrix.app] }}/${{ github.run_id }}-${{ github.sha }}.json
+          aws s3 cp ${{ matrix.app }}-sbom.json s3://${{ fromJson(steps.sbom-config.outputs.common).bucketArn }}/${{ fromJson(steps.sbom-config.outputs.config)[github.event.inputs.env][matrix.app] }}/${{ github.run_id }}-${{ github.sha }}.json
+
       - name: Notify Slack
         if: failure()
         uses: 8398a7/action-slack@v3
@@ -194,7 +218,7 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
 
   E2E:
-    if: ${{github.repository != 'tmfg/digitraffic-rail-history' && github.event.inputs.env == 'beta' && always() && contains(needs.*.result, 'success') && !(contains(needs.*.result, 'failure')) }}
+    if: ${{ github.repository != 'tmfg/digitraffic-rail-history' && github.event.inputs.env == 'beta' && always() && contains(needs.*.result, 'success') && !(contains(needs.*.result, 'failure')) }}
     needs: deploy
     environment: ${{ github.event.inputs.env }}
     runs-on: ubuntu-24.04
