DPO-3524 Ratapuolen Historiatyökalun JavaScript päivitykset (#116)
* DPO-3524 Ratapuolen Historiatyökalun JavaScript päivitykset
- Päivitetty riippuvuudet
- muutettu testejä
- update lock file
- platform: linux/amd64

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@
 
 !train-history-backend/
 !train-history-backend/playwright.config.ts
-!train-history-backend/.env.playwright.example
+!train-history-backend/.env.playwright
 !train-history-backend/e2e/
 !train-history-backend/e2e/**/
 !train-history-backend/e2e/**/*.ts
