--- a/train-history-backend/package.json
+++ b/train-history-backend/package.json
@@ -13,23 +13,25 @@
     "type-check": "tsc --noEmit",
     "clean": "rm -rf src/main/resources/static/history/js/*.js src/main/resources/static/history/js/*.map",
     "e2e": "playwright test",
-    "e2e-ui": "playwright test --ui"
+    "e2e-ui": "playwright test --ui",
+    "install-playwright": "playwright install"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^16.0.3",
-    "@rollup/plugin-typescript": "^12.1.4",
-    "@playwright/test": "^1.56.0",
-    "@types/node": "^24.9.1",
-    "dotenv": "^17.2.3",
-    "rollup": "^4.52.4",
-    "sass": "^1.93.2",
-    "tslib": "^2.8.1",
-    "typescript": "^5.9.3"
+    "@playwright/test": "1.58.2",
+    "@rollup/plugin-node-resolve": "16.0.3",
+    "@rollup/plugin-typescript": "12.3.0",
+    "@types/node": "25.2.3",
+    "dotenv": "17.3.1",
+    "rollup": "4.57.1",
+    "sass": "1.97.3",
+    "tslib": "2.8.1",
+    "typescript": "5.9.3"
   },
   "dependencies": {
-    "@fintraffic/fds-coreui-css": "^0.1.3",
-    "htmx-ext-path-params": "^2.0.1",
-    "htmx.org": "^2.0.7",
-    "lucide": "^0.546.0"
+    "@fintraffic/fds-coreui-css": "0.1.3",
+    "htmx-ext-path-params": "2.0.2",
+    "htmx.org": "2.0.8",
+    "lucide": "0.564.0",
+    "mysql2": "3.17.1"
   }
 }
