DPO-3524 Ratapuolen Historiatyökalun JavaScript päivitykset - Fix e2e tests

--- a/train-history-backend/.env.playwright
+++ b/train-history-backend/.env.playwright
@@ -1,2 +1,6 @@
 TRAIN_HISTORY_TEST_URL=http://localhost:26087
 IS_LOCAL_TEST_RUN=true
+
+# Test against beta
+#TRAIN_HISTORY_TEST_URL=https://rata-beta.digitraffic.fi/history
+#IS_LOCAL_TEST_RUN=false
