DPO-3524 Ratapuolen Historiatyökalun JavaScript päivitykset - Add parameters log to install run summary

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -26,6 +26,18 @@ jobs:
       actions: read
     environment: ${{ github.event.inputs.env }}
     steps:
+      - name: Log workflow inputs and environment
+        run: |
+          echo "## Workflow Inputs" >> $GITHUB_STEP_SUMMARY
+          echo "| Name | Value |" >> $GITHUB_STEP_SUMMARY
+          echo "|------|-------|" >> $GITHUB_STEP_SUMMARY
+          echo "| actor | ${{ github.actor }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| env | ${{ github.event.inputs.env }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| ref | ${{ github.event.inputs.ref }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| config-repo-branch | ${{ github.event.inputs.config-repo-branch }} |" >> $GITHUB_STEP_SUMMARY
+          # echo "| db-install | ${{ github.event.inputs.db-install }} |" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+        shell: bash
       - name: Checkout
         uses: actions/checkout@v6
         with:
